--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,10 @@ body {
 .hide {
   display: none;
 }
+.errmsg {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
